Projeto final + assinatura - 1.0v

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                 <span>Teclas</span> <input type="checkbox" checked>
             </div>
         </header>
+        <h3>by Joao Carvalho</h3>
+        
         <ul class="piano-keys">
             <li class="key white" data-key="a">
                 <span>a</span>
